--- a/fractal-ai-research.html
+++ b/fractal-ai-research.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Fractal AI Research</title>
+<!--
+  Fractal AI Research
+  Copyright (c) 2025 [Itoshiro Zuna/IZ LLC]
+  All rights reserved.
+  Unauthorized copying, modification, or distribution of this code is prohibited.
+-->
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     /* reset & body */
