--- a/fractal-meditation.html
+++ b/fractal-meditation.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fractalverse 3D VR Therapeutic Adaptation Enhanced</title>
+<!--
+  Fractalverse 3D VR Therapeutic Adaption Enhanced
+  Copyright (c) 2025 [Itoshiro Zuna/IZ LLC]
+  All rights reserved.
+  Unauthorized copying, modification, or distribution of this code is prohibited.
+-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/controls/OrbitControls.js"></script>
   <style>
