--- a/virtual-fractal-sanctuary.html
+++ b/virtual-fractal-sanctuary.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Virtual Fractal Sanctuary v7</title>
+<!--
+  Virtual Fractal Sanctuary v7
+  Copyright (c) 2025 [Itoshiro Zuna/IZ LLC]
+  All rights reserved.
+  Unauthorized copying, modification, or distribution of this code is prohibited.
+-->
   <style>
     html, body { 
       margin: 0; 
