--- a/fractal-ai-research.html
+++ b/fractal-ai-research.html
@@ -5,7 +5,8 @@
   <title>Fractal AI Research</title>
 <!--
   Fractal AI Research
-  Copyright (c) 2025 [Itoshiro Zuna/IZ LLC]
+  Itoshiro Zuna LLC
+  Copyright (c) 2025 Itoshiro Zuna LLC
   All rights reserved.
   Unauthorized copying, modification, or distribution of this code is prohibited.
 -->
