--- a/fractal-meditation.html
+++ b/fractal-meditation.html
@@ -6,7 +6,8 @@
   <title>Fractalverse 3D VR Therapeutic Adaptation Enhanced</title>
 <!--
   Fractalverse 3D VR Therapeutic Adaption Enhanced
-  Copyright (c) 2025 [Itoshiro Zuna/IZ LLC]
+  Itoshiro Zuna LLC
+  Copyright (c) 2025 Itoshiro Zuna LLC
   All rights reserved.
   Unauthorized copying, modification, or distribution of this code is prohibited.
 -->
