--- a/virtual-fractal-sanctuary.html
+++ b/virtual-fractal-sanctuary.html
@@ -6,7 +6,8 @@
   <title>Virtual Fractal Sanctuary v7</title>
 <!--
   Virtual Fractal Sanctuary v7
-  Copyright (c) 2025 [Itoshiro Zuna/IZ LLC]
+  Itoshiro Zuna LLC
+  Copyright (c) 2025 Itoshiro Zuna LLC
   All rights reserved.
   Unauthorized copying, modification, or distribution of this code is prohibited.
 -->
