--- a/fractal-ai-research.html
+++ b/fractal-ai-research.html
@@ -3,13 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Fractal AI Research</title>
-<!--
-  Fractal AI Research
-  Itoshiro Zuna LLC
-  Copyright (c) 2025 Itoshiro Zuna LLC
-  All rights reserved.
-  Unauthorized copying, modification, or distribution of this code is prohibited.
--->
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     /* reset & body */
@@ -624,4 +617,7 @@
   window.addEventListener('DOMContentLoaded',()=>new FractalApp());
   </script>
 </body>
+  <footer style="position: fixed; bottom: 0; left: 0; right: 0; background: rgba(0,0,0,0.85); color: #fff; text-align: center; padding: 8px; font-size: 0.8rem; z-index: 10;">
+  Itoshiro Zuna LLC © 2025. All rights reserved.
+</footer>
 </html>
