--- a/virtual-fractal-sanctuary.html
+++ b/virtual-fractal-sanctuary.html
@@ -1745,4 +1745,7 @@ Choose a mode: Fun Mode for bubble popping, or Meditation Mode for a guided jour
   });
   </script>
 </body>
+  <footer style="position: fixed; bottom: 0; left: 0; right: 0; background: rgba(0,0,0,0.85); color: #fff; text-align: center; padding: 8px; font-size: 0.8rem; z-index: 10;">
+  Itoshiro Zuna LLC © 2025. All rights reserved.
+</footer>
 </html>
