--- a/virtual-fractal-sanctuary.html
+++ b/virtual-fractal-sanctuary.html
@@ -1744,6 +1744,9 @@ Choose a mode: Fun Mode for bubble popping, or Meditation Mode for a guided jour
     renderer.setSize(window.innerWidth, window.innerHeight);
   });
   </script>
-</body>  
+</body>
+<footer style="position: fixed; bottom: 0; left: 0; right: 0; background: rgba(0,0,0,0.85); color: #fff; text-align: center; padding: 0.5px; font-size: 0.6rem; z-index: 8;">
+  Itoshiro Zuna LLC © 2025. All rights reserved.
+</footer>
 </footer>
 </html>
