--- a/app-instructions.html
+++ b/app-instructions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Instructions for using Itoshiro Zuna's fractal apps: Fractal AI Research, Fractal Meditation, and Virtual Fractal Sanctuary.">
+    <meta name="description" content="Instructions for using Itoshiro Zuna's fractal apps: Fractal AI Research, Fractal Meditation, Virtual Fractal Sanctuary, and PlasmaMind: Journey Through Consciousness.">
     <title>Itoshiro Zuna | App Instructions</title>
     <style>
         body {
@@ -94,11 +94,18 @@
             max-width: 800px;
             margin: 0 auto;
         }
+        section .note {
+            font-style: italic;
+            font-size: 0.9rem;
+            color: #FFD700;
+            margin: 10px auto;
+        }
         @media (max-width: 768px) {
             nav a { margin: 0 10px; font-size: 1rem; }
             section { padding: 60px 20px 20px 20px; }
             .dropdown-content { min-width: 120px; }
             .dropdown-content a { font-size: 0.9rem; padding: 8px 12px; }
+            section .note { font-size: 0.8rem; }
         }
     </style>
 </head>
@@ -112,6 +119,7 @@
                 <a href="fractal-ai-research.html">Fractal AI Research</a>
                 <a href="fractal-meditation.html">Fractal Meditation</a>
                 <a href="virtual-fractal-sanctuary.html">Virtual Fractal Sanctuary</a>
+                <a href="plasma-mind.html">PlasmaMind: Journey Through Consciousness</a>
                 <a href="app-instructions.html">Instructions</a>
             </div>
         </div>
@@ -119,6 +127,7 @@
     <section id="instructions">
         <div class="content-box">
             <h2>App Instructions</h2>
+            <p class="note">Note: These apps work best in VR or on a PC browser. Full functionality may be limited on mobile devices due to performance constraints.</p>
             <p>Learn how to use the apps, what they do, and how they can enhance your experience.</p>
             <div style="text-align: left; padding: 20px;">
                 <h3>Fractal AI Research</h3>
@@ -135,6 +144,11 @@
                 <p><strong>How It Works:</strong> Access the app in your browser, navigate the 3D fractal environment using mouse or touch controls, and interact with elements like portals and energy nodes to explore different fractal landscapes.</p>
                 <p><strong>What It Does:</strong> Creates an immersive 3D fractal world where users can explore, interact, and customize their surroundings, offering a virtual escape into a metaphysical sanctuary.</p>
                 <p><strong>What It Can Be Used For:</strong> Great for creative inspiration, relaxation, or virtual exploration. Use it to spark imagination, as a creative writing prompt, or as a digital space for mental respite.</p>
+
+                <h3>PlasmaMind: Journey Through Consciousness</h3>
+                <p><strong>How It Works:</strong> Open the app in your browser, use the UI buttons ("Start Meditation," "Toggle Guide," "VR Mode") to interact with the fractal visualization, and follow the guided meditation prompts displayed at the bottom of the screen. Optionally, enter VR mode for a more immersive experience.</p>
+                <p><strong>What It Does:</strong> Provides an immersive 3D fractal environment with a pulsating central sphere, accompanied by guided meditation prompts and calming audio to facilitate consciousness expansion.</p>
+                <p><strong>What It Can Be Used For:</strong> Ideal for meditation, exploring altered states of consciousness, or enhancing spiritual practices. Use it to deepen your mindfulness routine, engage in self-reflection, or as a tool for metaphysical exploration.</p>
             </div>
         </div>
     </section>
