--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Itoshiro Zuna, author of The Fractal Symphony of Time, weaves the thread of eras. Explore a metaphysical journey through dimensions and consciousness.">
     <title>Itoshiro Zuna | The Fractal Symphony of Time</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KENF2QKH8B"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-KENF2QKH8B');
+    </script>
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "rbllla5lox");
+    </script>
     <style>
         body {
             margin: 0;
@@ -229,20 +245,20 @@
         <div class="dropdown">
             <a href="#">Apps</a>
             <div class="dropdown-content">
-                <a href="fractal-ai-research.html">Fractal AI Research</a>
-                <a href="fractal-meditation.html">Fractal Meditation</a>
-                <a href="virtual-fractal-sanctuary.html">Virtual Fractal Sanctuary</a>
-                <a href="plasma-mind.html">PlasmaMind: Journey Through Consciousness</a>
-                <a href="app-instructions.html">Instructions</a>
+                <a href="fractal-ai-research.html" onclick="gtag('event', 'click', { 'event_category': 'Apps', 'event_label': 'Fractal AI Research' });">Fractal AI Research</a>
+                <a href="fractal-meditation.html" onclick="gtag('event', 'click', { 'event_category': 'Apps', 'event_label': 'Fractal Meditation' });">Fractal Meditation</a>
+                <a href="virtual-fractal-sanctuary.html" onclick="gtag('event', 'click', { 'event_category': 'Apps', 'event_label': 'Virtual Fractal Sanctuary' });">Virtual Fractal Sanctuary</a>
+                <a href="plasma-mind.html" onclick="gtag('event', 'click', { 'event_category': 'Apps', 'event_label': 'PlasmaMind' });">PlasmaMind: Journey Through Consciousness</a>
+                <a href="app-instructions.html" onclick="gtag('event', 'click', { 'event_category': 'Apps', 'event_label': 'Instructions' });">Instructions</a>
             </div>
         </div>
         <a href="#contact">Contact</a>
         <div class="dropdown">
             <a href="#">Social Media</a>
             <div class="dropdown-content">
-                <a href="https://x.com/senseizuna" target="_blank">X</a>
-                <a href="https://instagram.com/itoshirozuna" target="_blank">Instagram</a>
-                <a href="https://tiktok.com/@itoshirozuna" target="_blank">TikTok</a>
+                <a href="https://x.com/senseizuna" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Social Media', 'event_label': 'X' });">X</a>
+                <a href="https://instagram.com/itoshirozuna" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Social Media', 'event_label': 'Instagram' });">Instagram</a>
+                <a href="https://tiktok.com/@itoshirozuna" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Social Media', 'event_label': 'TikTok' });">TikTok</a>
             </div>
         </div>
     </nav>
@@ -251,7 +267,7 @@
             <h1>Itoshiro Zuna</h1>
             <p class="pen-name">One who weaves the thread of eras, carrying the name that arrives through hidden harbors</p>
             <p class="book-title">The Fractal Symphony of Time</p>
-            <a href="https://amzn.to/44CdNom" class="cta-button">Buy Now on Kindle</a>
+            <a href="https://amzn.to/44CdNom" class="cta-button" onclick="gtag('event', 'click', { 'event_category': 'Book Link', 'event_label': 'Fractal Symphony Kindle' });">Buy Now on Kindle</a>
         </div>
     </section>
     <section id="about">
@@ -266,10 +282,10 @@
             <div style="text-align: center; padding: 20px;">
                 <p style="font-size: 1.2rem; margin: 10px 0;">A metaphysical journey through dimensions and consciousness.</p>
                 <p style="font-size: 1.2rem; margin: 10px 0;">The Fractal Symphony of Time</p>
-                <a href="https://amzn.to/44CdNom" class="cta-button">Get Your Copy Now</a>
+                <a href="https://amzn.to/44CdNom" class="cta-button" onclick="gtag('event', 'click', { 'event_category': 'Book Link', 'event_label': 'Fractal Symphony Kindle' });">Get Your Copy Now</a>
                 <p style="font-size: 1.2rem; margin: 20px 0 10px 0;">A Sci-Fi novel that takes you on an adventure into the 9 realms.</p>
                 <p style="font-size: 1.2rem; margin: 10px 0;">When Realms Bleed: The World As I See It</p>
-                <a href="https://amzn.to/443m18U" class="cta-button">Get Your Copy Now</a>
+                <a href="https://amzn.to/443m18U" class="cta-button" onclick="gtag('event', 'click', { 'event_category': 'Book Link', 'event_label': 'When Realms Bleed Kindle' });">Get Your Copy Now</a>
             </div>
         </div>
     </section>
@@ -285,16 +301,16 @@
                     <input type="email" name="email" id="email" required>
                     <label for="message">Message</label>
                     <textarea name="message" id="message" rows="5" required></textarea>
-                    <button type="submit">Send Message</button>
+                    <button type="submit" onclick="gtag('event', 'submit', { 'event_category': 'Contact Form', 'event_label': 'Message Sent' });">Send Message</button>
                 </form>
             </div>
         </div>
     </section>
     <footer>
         <p>Follow me on social media:</p>
-        <a href="https://x.com/senseizuna" target="_blank">@senseizuna on X</a>
-        <a href="https://instagram.com/itoshirozuna" target="_blank">@itoshirozuna on Instagram</a>
-        <a href="https://tiktok.com/@itoshirozuna" target="_blank">@itoshirozuna on TikTok</a>
+        <a href="https://x.com/senseizuna" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Social Media', 'event_label': 'X' });">@senseizuna on X</a>
+        <a href="https://instagram.com/itoshirozuna" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Social Media', 'event_label': 'Instagram' });">@itoshirozuna on Instagram</a>
+        <a href="https://tiktok.com/@itoshirozuna" target="_blank" onclick="gtag('event', 'click', { 'event_category': 'Social Media', 'event_label': 'TikTok' });">@itoshirozuna on TikTok</a>
         <p>© 2025 Itoshiro Zuna. All rights reserved.</p>
     </footer>
     <script>
@@ -355,6 +371,23 @@
             requestAnimationFrame(animate);
         }
         animate();
+
+        // Track right-clicks to approximate "view source" actions
+        document.addEventListener('contextmenu', function() {
+            gtag('event', 'right_click', { 'event_category': 'Code Interest', 'event_label': 'Possible View Source' });
+        });
+    </script>
+    <div id="cookie-banner" style="position: fixed; bottom: 0; width: 100%; background: rgba(0,0,0,0.8); color: #fff; padding: 10px; text-align: center; z-index: 1000;">
+        <p>We use cookies to track usage and improve your experience. <a href="privacy-policy.html" style="color: #FFD700;">Learn more</a> | <button onclick="acceptCookies()" style="background: #FFD700; color: #0a0a23; border: none; padding: 5px 10px; cursor: pointer;">Accept</button></p>
+    </div>
+    <script>
+        function acceptCookies() {
+            localStorage.setItem('cookiesAccepted', 'true');
+            document.getElementById('cookie-banner').style.display = 'none';
+        }
+        if (localStorage.getItem('cookiesAccepted')) {
+            document.getElementById('cookie-banner').style.display = 'none';
+        }
     </script>
 </body>
 </html>
