--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <div class="dropdown">
             <a href="#">Kid's Zone</a>
             <div class="dropdown-content">
-                <a href="kais-wisdom-fighters.html">Kai's Wisdom Fighters</a>
+                <a href="kais-wisdom-fighters.html">Kai Wisdom Fighters</a>
                 <a href="certificate.html">Certificates</a>
             </div>
         </div>
