--- a/blog.html
+++ b/blog.html
@@ -222,7 +222,16 @@
                     <a href="fractal-ai-research.html">Fractal AI Research</a>
                     <a href="fractal-meditation.html">Fractal Meditation</a>
                     <a href="virtual-fractal-sanctuary.html">Virtual Fractal Sanctuary</a>
+                    <a href="plasmamind-journey.html">PlasmaMind: Journey Through Consciousness</a>
+                    <a href="fractal-racers.html">Fractal Racers: Tron Edition</a>
                     <a href="app-instructions.html">Instructions</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <a href="#">Kid's Zone</a>
+                <div class="dropdown-content">
+                    <a href="kai-wisdom-fighters.html">Kai Wisdom Fighters</a>
+                    <a href="certificate.html">Certificate</a>
                 </div>
             </div>
             <a href="index.html#contact">Contact</a>
